# advent-of-code

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/year_2023/day_1/: mod.rs
src/year_2023/day_2/: mod.rs
src/year_2023/day_3/: mod.rs  mod.rs.bak
src/year_2023/day_4/: mod.rs
src/year_2023/day_5/: mod.rs
src/year_2023/day_6/: mod.rs
src/year_2023/day_7/: mod.rs
src/year_2023/day_8/: mod.rs
src/year_2024/day_1/: mod.rs
src/year_2024/day_10/: mod.rs
src/year_2024/day_11/: mod.rs
src/year_2024/day_12/: mod.rs
src/year_2024/day_13/: mod.rs
src/year_2024/day_14/: mod.rs
src/year_2024/day_15/: mod.rs
src/year_2024/day_16/: mod.rs
src/year_2024/day_17/: mod.rs
src/year_2024/day_18/: mod.rs
src/year_2024/day_19/: mod.rs
src/year_2024/day_2/: mod.rs
src/year_2024/day_20/: mod.rs
src/year_2024/day_21/: mod.rs
src/year_2024/day_22/: mod.rs
src/year_2024/day_23/: mod.rs
src/year_2024/day_24/: mod.rs
src/year_2024/day_25/: mod.rs
src/year_2024/day_3/: mod.rs
src/year_2024/day_4/: mod.rs
src/year_2024/day_5/: mod.rs
src/year_2024/day_6/: mod.rs
src/year_2024/day_7/: mod.rs
src/year_2024/day_8/: mod.rs
src/year_2024/day_9/: mod.rs  puzzle.md
src/year_2025/day_1/: mod.rs
src/year_2025/day_10/: mod.rs
src/year_2025/day_11/: mod.rs
src/year_2025/day_12/: mod.rs
src/year_2025/day_2/: mod.rs
src/year_2025/day_3/: mod.rs
src/year_2025/day_4/: mod.rs
src/year_2025/day_5/: mod.rs
src/year_2025/day_6/: mod.rs
src/year_2025/day_7/: mod.rs
src/year_2025/day_8/: mod.rs
template/: mod.rs
(+1 files in other folders)
