[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-client = "0.2.0"
cached = "0.54.0"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.13.0"
rayon = "1.8.0"
regex = "1.11.1"
tracing = "0.1.40"
